# Live-Camera-Feed-Scene-Descriptor-for-Visually-Impaired

./: ARCHITECTURE.md  CLAUDE.md  README.md
Backend/: .env.example  .gitignore  Makefile  ReadMe.md  VideoCaptionTrack.py  a.txt  caption.csv  caption.py  components.py  config.py  docker-compose.yml  enums.py  initialization.py  install.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test2.py
Backend/scripts/: __init__.py  batch_caption.py
Backend/src/scene_descriptor/: __init__.py  __main__.py
Backend/src/scene_descriptor/api/: __init__.py  handlers.py  middleware.py  routes.py
Backend/src/scene_descriptor/config/: __init__.py  constants.py  settings.py
Backend/src/scene_descriptor/enums/: __init__.py  status.py
Backend/src/scene_descriptor/models/: __init__.py  model_manager.py  processor.py
Backend/src/scene_descriptor/services/: __init__.py  caption_service.py  video_service.py
Backend/src/scene_descriptor/utils/: __init__.py  exceptions.py  logging.py  state.py
Backend/src/scene_descriptor/webrtc/: __init__.py  channels.py  connection.py  tracks.py
Backend/videos/: captions.csv
Frontend/: .gitignore  README.md  pubspec.yaml
Frontend/android/app/: build.gradle
Frontend/android/app/src/debug/: AndroidManifest.xml
Frontend/android/app/src/main/: AndroidManifest.xml
Frontend/android/app/src/main/kotlin/com/example/cammelive/: MainActivity.kt
Frontend/android/app/src/profile/: AndroidManifest.xml
Frontend/ios/Runner/: Info.plist
Frontend/ios/Runner.xcodeproj/: project.pbxproj
Frontend/lib/: main.dart
Frontend/lib/config/: app_config.dart
Frontend/lib/constants/: api_url.dart  assets_path.dart  colors.dart  text_styles.dart
Frontend/lib/helper/: helper.dart
Frontend/lib/provider/: upload_video_provider.dart
Frontend/lib/screens/: home.dart  live_caption.dart  splash.dart  upload_video.dart
Frontend/lib/services/: upload_video_service.dart
Frontend/lib/utils/: extension.dart  navigator.dart
Frontend/lib/widgets/: custom_button.dart  title_sub_text.dart
Frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
Frontend/macos/Runner.xcodeproj/: project.pbxproj
Frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Frontend/macos/Runner/Configs/: AppInfo.xcconfig
Frontend/test/: widget_test.dart
Frontend/web/: index.html  manifest.json
Frontend/windows/: CMakeLists.txt
Frontend/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
Frontend/windows/runner/: Runner.rc  main.cpp
guides/: frontend-setup.md
