[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-descriptor"
version = "1.0.0"
description = "Real-time video captioning for visually impaired users using WebRTC and ML"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bijaya Shrestha"}
]
keywords = [
    "video-captioning",
    "accessibility",
    "webrtc",
    "machine-learning",
    "transformers",
    "visually-impaired"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
    "aiortc>=1.9.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "av>=12.0.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[project.scripts]
scene-descriptor = "scene_descriptor.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/scene-descriptor"
Documentation = "https://github.com/yourusername/scene-descriptor#readme"
Repository = "https://github.com/yourusername/scene-descriptor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.wav", "*.txt"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ml-models
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = ["ml-models", ".venv", "venv"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["ml-models", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["ml-models", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src/scene_descriptor --cov-report=term-missing"

[tool.coverage.run]
source = ["src/scene_descriptor"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
